--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,54 @@
-site_name: BALLLLL
+site_name: PC5132 Website
 
 theme:
-    name: null
-    custom_dir: ballll/
+    name: "material"
+    # custom_dir: "ballll/"
+
+    features:
+        - navigation.tabs
+        - search.suggest
+        - search.share
+
+    # 404 page
+    static_templates:
+        - 404.html
+
+    # Necessary for search to work properly
+    include_search_page: false
+    search_index_only: true
+
+    # Default values, taken from mkdocs_theme.yml
+    language: en
+    font:
+        text: Roboto
+        code: Roboto Mono
+    favicon: assets/favicon.png
+    icon:
+        logo: material/telescope
+
+    palette:
+        - media: "(prefers-color-scheme: dark)"
+          scheme: slate
+          primary: black
+          toggle:
+              icon: material/toggle-switch
+              name: Switch to light mode
+        - media: "(prefers-color-scheme: light)"
+          scheme: default
+          primary: black
+          toggle:
+              icon: material/toggle-switch-off-outline
+              name: Switch to dark mode
+
+markdown_extensions:
+    - pymdownx.arithmatex:
+          generic: true
+
+extra_css:
+    - stylesheets/style.css
+    - stylesheets/quiz.css
+  
+extra_javascript:
+    - javascripts/mathjax.js
+    - https://polyfill.io/v3/polyfill.min.js?features=es6
+    - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
