--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,19 +6,20 @@ nav:
         - What?: Neutron Stars/Intro.md
         - How?: Neutron Stars/Theory.md
     - Quark Stars: Quek Stars.md
-
 theme:
     name: "material"
-    # custom_dir: "ballll/"
+    custom_dir: overrides
 
     features:
-        - navigation.tabs
+        # - navigation.tabs
         - search.suggest
         - search.share
 
     # 404 page
     static_templates:
         - 404.html
+        - nav.html
+        
 
     # Necessary for search to work properly
     include_search_page: false
@@ -54,7 +55,7 @@ markdown_extensions:
 extra_css:
     - stylesheets/style.css
     - stylesheets/quiz.css
-  
+
 extra_javascript:
     - javascripts/mathjax.js
     - https://polyfill.io/v3/polyfill.min.js?features=es6
