--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: PC5132 Website
 
 nav:
-    - Welcome: "!Outline.md"
+    - Welcome: index.md
     - Neutron Stars:
         - Preview: 1.md
         - Principles of Pauli: 2.md
@@ -16,10 +16,10 @@ theme:
     custom_dir: "material/"
 
     features:
-        - header.autohide
         - search.suggest
         - search.share
         - navigation.top
+        - navigation.instant
 
     # 404 page
     static_templates:
