Forgor one part

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ nav:
         - On Degeneracy: 7.md
         - The Strong Force: 8.md
         - Overcoming Exclusion: 9.md
-    - Yu Pin things: quiz/index.html
+    - Become a Neutron Star: quiz/index.html
     - Fin: Conclusion.md
     - Credits: Credits.md
 
