--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,10 +7,10 @@ nav:
         - The Origin: 3.md
         - The Structure: 4.md
     - The Quarkiness: 
-        - An introduction: 5_video.md
+        - Introduction to Quark Matter: 5_video.md
         - What are Quarks?: 5.md
     - Stranger Things:
-        - An introduction: 6_video.md
+        - Introduction to Strange Matter: 6_video.md
         - Strange Stranglets?: 6.md
     - Appendix: 
         - On Degeneracy: 7.md
